#
# LIBRARIES
#

alias(
    name = "softfloat",
    actual = select({
        "@//:macos-arm64": "@softfloat_macos-arm64",
    }),
)

alias(
    name = "murmur3",
    actual = select({
        "@//:macos-arm64": "@murmur3_macos-arm64",
    }),
)

cc_library(
    name = "noun",
    srcs = glob(
        [
            "*.c",
            "*.h",
            "jets/tree.c",
            "jets/*.h",
            "jets/**/*.c",
        ],
        exclude = [
            "noun.h",
            "*_tests.c",
        ],
    ),
    hdrs = ["noun.h"],
    includes = ["."],
    linkstatic = True,
    visibility = ["//pkg:__subpackages__"],
    deps = [
        "//pkg/c3",
        "//pkg/ent",
        "//pkg/ur",
        "//pkg/urcrypt",
        "@gmp",
        "murmur3",  # TODO: replace aliases with select statement
        "@openssl",
        "softfloat",  # TODO: replace aliases with select statement
    ] + select({
        # We don't use `libsigsegv` on Windows because of performance reasons.
        "@platforms//os:windows": [],
        "//conditions:default": ["@sigsegv"],
    }) + select({
        "@platforms//os:macos": ["//pkg/noun/platform/darwin"],
        "@platforms//os:linux": ["//pkg/noun/platform/linux"],
        "@platforms//os:openbsd": ["//pkg/noun/platform/openbsd"],
        "@platforms//os:windows": ["//pkg/noun/platform/mingw"],
    }),
)

#
# TESTS
#

cc_test(
    name = "hashtable_tests",
    timeout = "short",
    srcs = ["hashtable_tests.c"],
    visibility = ["//visibility:private"],
    deps = [":noun"],
)

cc_test(
    name = "jets_tests",
    timeout = "short",
    srcs = ["jets_tests.c"],
    visibility = ["//visibility:private"],
    deps = [":noun"],
)

cc_test(
    name = "nock_tests",
    timeout = "short",
    srcs = ["nock_tests.c"],
    visibility = ["//visibility:private"],
    deps = [":noun"],
)

cc_test(
    name = "retrieve_tests",
    timeout = "short",
    srcs = ["retrieve_tests.c"],
    visibility = ["//visibility:private"],
    deps = [":noun"],
)

cc_test(
    name = "serial_tests",
    timeout = "short",
    srcs = ["serial_tests.c"],
    visibility = ["//visibility:private"],
    deps = [":noun"],
)
