#
# LIBRARIES
#

cc_library(
    name = "pma",
    srcs = glob(
        [
            "*.c",
            "*.h",
        ],
        exclude = ["pma.h"],
    ),
    hdrs = ["pma.h"],
    includes = ["."],
    linkstatic = True,
    deps = ["@sigsegv"],
)

#
# TESTS
#

cc_test(
    name = "pma_tests",
    timeout = "short",
    srcs = ["pma_tests.c"],
    features = select({
        "@platforms//os:linux": ["fully_static_link"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:private"],
    deps = [":pma"],
)

cc_test(
    name = "util_tests",
    timeout = "short",
    srcs = ["util_tests.c"],
    features = select({
        "@platforms//os:linux": ["fully_static_link"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:private"],
    deps = [":pma"],
)
